export interface BorrowRequestItemEntity {
  id: number;
  borrowRequestId: number;
  equipmentId: number;
  quantity: number;
}
